structure_almost_untacchable-added_xxxs-mode(fun)-not-font_honest

--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
             <div class="presentation margin">
                 <div class="img"><img src="./img/tiramisu.jpg" alt="tiramisù"></div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur dolore enim perspiciatis earum suscipit eos odio consequatur culpa fugit quo nemo vero, quam, accusantium doloribus laudantium consectetur, soluta iure!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur dolore enim perspiciatis earum suscipit eos odio consequatur culpa fugit quo nemo vero, quam, accusantium doloribus laudantium consectetur, soluta iure!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque consequuntur dolore enim perspiciatis earum suscipit eos odio consequatur culpa fugit quo nemo vero, quam, accusantium doloribus laudantium consectetur, soluta iure!
-
+                    Lorem ipsum <storng>dolor</storng> sit amet consectetur adipisicing elit. Atque consequuntur dolore enim perspiciatis earum suscipit eos odio consequatur culpa fugit quo nemo vero, quam, accusantium doloribus laudantium consectetur, soluta iure!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Atque </strong>consequuntur dolore enim perspiciatis earum suscipit eos odio consequatur culpa fugit quo nemo vero, quam, accusantium doloribus laudantium consectetur, soluta iure!
+                    Lorem ipsum <strong> sit</strong> amet consectetur adipisicing elit. Atque consequuntur dolore enim perspiciatis earum suscipit eos odio consequatur culpa fugit quo nemo vero, quam, accusantium doloribus laudantium consectetur, soluta iure!
                 </p>
             </div>
         </section>
